# MPH6-Pattern-Formation-Simulation

./: .gitignore  Makefile  README.md  arduino-reaction-diffusion  arduino-reaction-diffusion-16.txt  final-final-reaction-diffusion-16.txt
src/: CMakeLists.txt  main.cc  main.cpp
